--- a/index.html
+++ b/index.html
@@ -290,13 +290,13 @@ body {
 </div>
   <h1 class= "main-title"> Online dating - symulacja </h1>
   <div id="instructionBeforeChoice">
-  <p><strong>Instrukcja:</strong> Wypełnij kwestionariusz, do który znajduje się poniżej. Pamiętaj, że aby Twój wynik był ważny musisz wypełnić formularz do końca. Kiedy w kwestionariuszu pojawi się przycisk "Prześlij" oznacza, że dotarłeś do jego końca. Następnie kliknij "Rozpocznij", aby zacząć badanie. Obejrzyj wszystkie zdjęcia i oceń atrakcyjność każdej osoby w skali 1–10. Następnie wybierz jedną osobę, którą oceniasz najwyżej. Nawet jeżeli kilka zdjęć otrzymało te samą ocenę, wybierz tylko jedno zdjęcie.</p>
+  <p><strong>Instrukcja:</strong> Wypełnij kwestionariusz, który znajduje się poniżej. Pamiętaj, że aby Twój wynik był ważny musisz wypełnić formularz do końca. Kiedy w kwestionariuszu pojawi się przycisk "Prześlij" oznacza, że dotarłeś do jego końca. Następnie kliknij fioletowy przycisk "Rozpocznij" znajdujący się na końcu strony, aby zacząć badanie. Obejrzyj wszystkie zdjęcia i oceń atrakcyjność każdej osoby w skali 1–10. Następnie wybierz jedną osobę, którą oceniasz najwyżej. Nawet jeżeli kilka zdjęć otrzymało te samą ocenę, wybierz tylko jedno zdjęcie.</p>
 </div>
   <div id="nicknameSection">
   <h2 class="section-title">Podaj swój pseudonim:</h2>
 <input type="text" id="nicknameInput" class="input-large" placeholder="Twój pseudonim" />
 <p class="form-note">
-  Przed rozpoczęciem badania, proszę wypełnij poniższy formularz:
+  Przed rozpoczęciem, oznacz zgodę na badanie na górze strony i wypełnij poniższy formularz:
 
 </p>
   </div>
@@ -390,7 +390,7 @@ body {
   <label for="name">Imię:</label><br>
   <input type="text" id="name" name="name" required><br><br>
 
-  <label for="age">Wiek:</label><br>
+  <label for="age">Wiek(liczba):</label><br>
   <input type="number" id="age" name="age" min="16" max="100" required><br><br>
 
   <label for="interests">3 zainteresowania (oddziel przecinkami):</label><br>
@@ -457,7 +457,7 @@ body {
   <div id="thankYouScreen" class="hidden">
   <h1 style="color: white; margin-top: 25px;">Dziękujemy za udział w badaniu!</h1>
     <h2 style="color: white; margin-top: 20px;"> Celem badania było sprawdzenie, w jakim stopniu romantyczne odrzucenie może prowadzić do reakcji o charakterze agresywnym.
-Badanie zostało skonstruowane tak, aby wywołać sytuację potencjalnego odrzucenia w kontrolowanych warunkach eksperymentalnych.
+Badanie zostało skonstruowane tak, aby w grupie eksperymentalnej wywołać sytuację potencjalnego odrzucenia w kontrolowanych warunkach.
 Dodatkowo, analizowane są także indywidualne różnice psychologiczne, które mogły wpływać na pojawienie się reakcji i jej intensywność.
 Jeśli po udziale w badaniu czujesz dyskomfort lub chciałbyś porozmawiać o jego treści, zapraszam do kontaktu.  
       
