--- a/index.html
+++ b/index.html
@@ -288,9 +288,17 @@ body {
 </label>
   
 </div>
-  <h1 class= "main-title"> Online dating - symulacja </h1>
+  <h1 class= "main-title"> Online dating - badanie </h1>
   <div id="instructionBeforeChoice">
-  <p><strong>Instrukcja:</strong> Wypełnij kwestionariusz, który znajduje się poniżej. Pamiętaj, że aby Twój wynik był ważny musisz wypełnić formularz do końca. Kiedy w kwestionariuszu pojawi się przycisk "Prześlij" oznacza, że dotarłeś do jego końca. Następnie kliknij fioletowy przycisk "Rozpocznij" znajdujący się na końcu strony, aby zacząć badanie. Obejrzyj wszystkie zdjęcia i oceń atrakcyjność każdej osoby w skali 1–10. Następnie wybierz jedną osobę, którą oceniasz najwyżej. Nawet jeżeli kilka zdjęć otrzymało te samą ocenę, wybierz tylko jedno zdjęcie.</p>
+  <p><strong>Instrukcja:</strong></p>
+    <ul>
+      <li>1.Zaznacz zgodę na udział w badaniu i podaj swój pseudonim, którego używasz w całym badaniu</li>
+      <li>2.Wypełnij kwestionariusz, który znajduje się poniżej. Pamiętaj, że aby Twój wynik był ważny musisz wypełnić formularz do końca.</li>
+      <li>3.Kiedy w kwestionariuszu pojawi się przycisk "Prześlij" oznacza, że dotarłeś do jego końca.</li>
+      <li>4.Następnie kliknij fioletowy przycisk "Rozpocznij" znajdujący się na samym końcu strony, aby zacząć właściwe badanie.</li>
+      <li>5.Obejrzyj wszystkie zdjęcia i oceń atrakcyjność każdej osoby w skali 1–10.</li>
+      <li>6.Następnie wybierz jedną osobę, którą oceniasz najwyżej. Nawet jeżeli kilka zdjęć otrzymało te samą ocenę, wybierz tylko jedno zdjęcie.</li>
+    </ul> 
 </div>
   <div id="nicknameSection">
   <h2 class="section-title">Podaj swój pseudonim:</h2>
