--- a/index.html
+++ b/index.html
@@ -174,6 +174,17 @@
   color: white;
   font-weight: bold;
 }
+    #instructionBeforeChoice ol {
+  padding-left: 20px;
+  margin-top: 10px;
+  font-weight: normal;
+}
+
+#instructionBeforeChoice ol li {
+  margin-bottom: 10px;
+  line-height: 1.5;
+  list-style-type: decimal; /* upewnia się, że są numerki */
+}
     #submitFinal {
   margin-top: 15px;
   padding: 10px 20px;
@@ -291,14 +302,14 @@ body {
   <h1 class= "main-title"> Online dating - badanie </h1>
   <div id="instructionBeforeChoice">
   <p><strong>Instrukcja:</strong></p>
-    <ul>
-      <li>1.Zaznacz zgodę na udział w badaniu i podaj swój pseudonim, którego używasz w całym badaniu</li>
-      <li>2.Wypełnij kwestionariusz, który znajduje się poniżej. Pamiętaj, że aby Twój wynik był ważny musisz wypełnić formularz do końca.</li>
-      <li>3.Kiedy w kwestionariuszu pojawi się przycisk "Prześlij" oznacza, że dotarłeś do jego końca.</li>
-      <li>4.Następnie kliknij fioletowy przycisk "Rozpocznij" znajdujący się na samym końcu strony, aby zacząć właściwe badanie.</li>
-      <li>5.Obejrzyj wszystkie zdjęcia i oceń atrakcyjność każdej osoby w skali 1–10.</li>
-      <li>6.Następnie wybierz jedną osobę, którą oceniasz najwyżej. Nawet jeżeli kilka zdjęć otrzymało te samą ocenę, wybierz tylko jedno zdjęcie.</li>
-    </ul> 
+    <ol>
+      <li>Zaznacz zgodę na udział w badaniu i podaj swój pseudonim, którego używasz w całym badaniu</li>
+      <li>Wypełnij kwestionariusz, który znajduje się poniżej. Pamiętaj, że aby Twój wynik był ważny musisz wypełnić formularz do końca.</li>
+      <li>Kiedy w kwestionariuszu pojawi się przycisk "Prześlij" oznacza, że dotarłeś do jego końca.</li>
+      <li>Następnie kliknij fioletowy przycisk "Rozpocznij" znajdujący się na samym końcu strony, aby zacząć właściwe badanie.</li>
+      <li>Obejrzyj wszystkie zdjęcia i oceń atrakcyjność każdej osoby w skali 1–10.</li>
+      <li>Następnie wybierz jedną osobę, którą oceniasz najwyżej. Nawet jeżeli kilka zdjęć otrzymało te samą ocenę, wybierz tylko jedno zdjęcie.</li>
+    </ol> 
 </div>
   <div id="nicknameSection">
   <h2 class="section-title">Podaj swój pseudonim:</h2>
@@ -465,7 +476,7 @@ body {
   <div id="thankYouScreen" class="hidden">
   <h1 style="color: white; margin-top: 25px;">Dziękujemy za udział w badaniu!</h1>
     <h2 style="color: white; margin-top: 20px;"> Celem badania było sprawdzenie, w jakim stopniu romantyczne odrzucenie może prowadzić do reakcji o charakterze agresywnym.
-Badanie zostało skonstruowane tak, aby w grupie eksperymentalnej wywołać sytuację potencjalnego odrzucenia w kontrolowanych warunkach.
+Badanie zostało skonstruowane tak, aby w grupie eksperymentalnej wywołać sytuację potencjalnego odrzucenia w kontrolowanych warunkach. Wiadomość odrzucająca od wybranej osoby była fikcyjna i nie nastąpiła na podstawie realnej oceny informacji uzyskanych od badanego.
 Dodatkowo, analizowane są także indywidualne różnice psychologiczne, które mogły wpływać na pojawienie się reakcji i jej intensywność.
 Jeśli po udziale w badaniu czujesz dyskomfort lub chciałbyś porozmawiać o jego treści, zapraszam do kontaktu.  
       
