--- a/index.html
+++ b/index.html
@@ -174,6 +174,13 @@
   color: white;
   font-weight: bold;
 }
+    #instructionBeforeChoice {
+  text-align: left;
+}
+
+#instructionBeforeChoice p {
+  text-align: center;
+}
     #instructionBeforeChoice ol {
   padding-left: 20px;
   margin-top: 10px;
