--- a/index.html
+++ b/index.html
@@ -488,6 +488,13 @@ Dodatkowo, analizowane są także indywidualne różnice psychologiczne, które 
 Jeśli po udziale w badaniu czujesz dyskomfort lub chciałbyś porozmawiać o jego treści, zapraszam do kontaktu.  
       
     </h2>
+    <p style="color: white; font-size: 18px; margin-top: 20px;">
+  Jeśli chcesz wziąć udział w <strong>loterii</strong> z nagrodami (3x karta podarunkowa 50 zł), możesz podać swój e-mail i pseudonim w osobnym formularzu:
+  <br />
+  <a href="https://docs.google.com/forms/d/e/1FAIpQLSdFpygJ-5GolOVLxKlJfms8oxhpS1Sv7CMMat0i8OgvMTz2Fg/viewform?usp=header" target="_blank" style="color: #ffd700; font-weight: bold;">
+    Przejdź do formularza loterii
+  </a>
+</p>
 </div>
 
 <script>
