--- a/index.html
+++ b/index.html
@@ -488,13 +488,19 @@ Dodatkowo, analizowane są także indywidualne różnice psychologiczne, które 
 Jeśli po udziale w badaniu czujesz dyskomfort lub chciałbyś porozmawiać o jego treści, zapraszam do kontaktu.  
       
     </h2>
-    <p style="color: white; font-size: 18px; margin-top: 20px;">
-  Jeśli chcesz wziąć udział w <strong>loterii</strong> z nagrodami (3x karta podarunkowa 50 zł), możesz podać swój e-mail i pseudonim w osobnym formularzu:
-  <br />
-  <a href="https://docs.google.com/forms/d/e/1FAIpQLSdFpygJ-5GolOVLxKlJfms8oxhpS1Sv7CMMat0i8OgvMTz2Fg/viewform?usp=header" target="_blank" style="color: #ffd700; font-weight: bold;">
-    Przejdź do formularza loterii
-  </a>
-</p>
+   <div style="background-color: rgba(255, 255, 255, 0.1); border-left: 5px solid #ffd700; padding: 20px; margin-top: 30px; border-radius: 10px;">
+  <p style="color: white; font-size: 18px; margin: 0;">
+    🎁 <strong>Weź udział w loterii!</strong><br />
+    3 osoby mogą wygrać <strong>kartę podarunkową o wartości 50 zł</strong>. Wystarczy podać e-mail i pseudonim w osobnym formularzu:
+  </p>
+  <p style="margin-top: 15px;">
+    <a href="https://docs.google.com/forms/d/e/1FAIpQLSdFpygJ-5GolOVLxKlJfms8oxhpS1Sv7CMMat0i8OgvMTz2Fg/viewform?usp=header" 
+       target="_blank"
+       style="display: inline-block; background-color: #ffd700; color: black; padding: 10px 16px; text-decoration: none; font-weight: bold; border-radius: 6px; margin-top: 10px;">
+      👉 Przejdź do formularza loterii
+    </a>
+  </p>
+</div>
 </div>
 
 <script>
