--- a/index.html
+++ b/index.html
@@ -490,7 +490,7 @@ Jeśli po udziale w badaniu czujesz dyskomfort lub chciałbyś porozmawiać o je
     </h2>
    <div style="background-color: rgba(255, 255, 255, 0.1); border-left: 5px solid #ffd700; padding: 20px; margin-top: 30px; border-radius: 10px;">
   <p style="color: white; font-size: 18px; margin: 0;">
-    🎁 <strong>Weź udział w loterii!</strong><br />
+    🎁 <strong>Weź udział w loterii przeznaczonej dla osób badanych!</strong><br />
     3 osoby mogą wygrać <strong>kartę podarunkową o wartości 50 zł</strong>. Wystarczy podać e-mail i pseudonim w osobnym formularzu:
   </p>
   <p style="margin-top: 15px;">
