--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@ body {
   <div id="instructionBeforeChoice">
   <p><strong>Instrukcja:</strong></p>
     <ol>
-      <li>Zaznacz zgodę na udział w badaniu i podaj swój pseudonim, którego używasz w całym badaniu</li>
+      <li>Zaznacz zgodę na udział w badaniu i podaj swój pseudonim, którego używasz w całym badaniu. Pseudonim powinien być identyczny zarówno w arkuszu Google Forms jak i eksperymencie.</li>
       <li>Wypełnij kwestionariusz, który znajduje się poniżej. Pamiętaj, że aby Twój wynik był ważny musisz wypełnić formularz do końca.</li>
       <li>Kiedy w kwestionariuszu pojawi się przycisk "Prześlij" oznacza, że dotarłeś do jego końca.</li>
       <li>Następnie kliknij fioletowy przycisk "Rozpocznij" znajdujący się na samym końcu strony, aby zacząć właściwe badanie.</li>
