--- a/index.html
+++ b/index.html
@@ -818,6 +818,23 @@ function updateProgress(percentage) {
   document.getElementById("progressBar").style.width = percentage + "%";
 }
 </script>
+  <div id="introPopup" style="position: fixed; top: 0; left: 0; width: 100%; height: 100%; 
+  background: rgba(0, 0, 0, 0.5); display: flex; justify-content: center; align-items: center; 
+  z-index: 9999; backdrop-filter: blur(2px);">
+  
+  <div style="background: white; padding: 30px; border-radius: 10px; max-width: 500px; text-align: center; box-shadow: 0 0 20px rgba(0,0,0,0.3);">
+    <h2 style="font-size: 22px; margin-bottom: 15px; color: #333;">Zanim zaczniesz</h2>
+    <p style="font-size: 16px; color: #444;">
+      Badanie składa się z dwóch etapów: krótkiego kwestionariusza oraz właściwego eksperymentu. 
+      Aby je ukończyć i wziąć udział w loterii, musisz przejść przez oba etapy.
+    </p>
+    <button onclick="document.getElementById('introPopup').style.display='none'" 
+      style="margin-top: 20px; padding: 10px 20px; font-size: 16px; background-color: #ffd700; border: none; border-radius: 5px; cursor: pointer;">
+      Rozumiem
+    </button>
+  </div>
+</div>
+
 </body>
 </html>
 
