--- a/index.html
+++ b/index.html
@@ -823,13 +823,13 @@ function updateProgress(percentage) {
   z-index: 9999; backdrop-filter: blur(2px);">
   
   <div style="background: white; padding: 30px; border-radius: 10px; max-width: 500px; text-align: center; box-shadow: 0 0 20px rgba(0,0,0,0.3);">
-    <h2 style="font-size: 22px; margin-bottom: 15px; color: #333;">Zanim zaczniesz</h2>
-    <p style="font-size: 16px; color: #444;">
-      Badanie składa się z dwóch etapów: krótkiego kwestionariusza oraz właściwego eksperymentu. 
+    <h2 style="font-size: 25px; margin-bottom: 15px; color: #333;"><strong>!Zanim zaczniesz!</strong></h2>
+    <p style="font-size: 18px; color: #444;">
+      Badanie składa się z dwóch etapów: kwestionariusza oraz właściwego eksperymentu. <strong>Eksperyment zaczyna się PO wypełnieniu ankiety!</strong> 
       Aby je ukończyć i wziąć udział w loterii, musisz przejść przez oba etapy.
     </p>
     <button onclick="document.getElementById('introPopup').style.display='none'" 
-      style="margin-top: 20px; padding: 10px 20px; font-size: 16px; background-color: #ffd700; border: none; border-radius: 5px; cursor: pointer;">
+      style="margin-top: 20px; padding: 10px 20px; font-size: 16px; background-color: #cc6ce7; border: none; border-radius: 5px; cursor: pointer;">
       Rozumiem
     </button>
   </div>
