--- a/index.html
+++ b/index.html
@@ -823,7 +823,7 @@ function updateProgress(percentage) {
   z-index: 9999; backdrop-filter: blur(2px);">
   
   <div style="background: white; padding: 30px; border-radius: 10px; max-width: 500px; text-align: center; box-shadow: 0 0 20px rgba(0,0,0,0.3);">
-    <h2 style="font-size: 25px; margin-bottom: 15px; color: #333;"><strong>!Zanim zaczniesz!</strong></h2>
+    <h2 style="font-size: 25px; margin-bottom: 15px; color: #333;"><strong>Zanim zaczniesz!</strong></h2>
     <p style="font-size: 18px; color: #444;">
       Badanie składa się z dwóch etapów: kwestionariusza oraz właściwego eksperymentu. <strong>Eksperyment zaczyna się PO wypełnieniu ankiety!</strong> 
       Aby je ukończyć i wziąć udział w loterii, musisz przejść przez oba etapy.
